typescript/checker/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            245,
        ),
        hi: BytePos(
            250,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:8:21
  |
8 | async function fn2(): { } { } // error
  |                     ^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            325,
        ),
        hi: BytePos(
            333,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:10:21
   |
10 | async function fn4(): number { } // error
   |                     ^^^^^^^^

error: unimplemented
expand_export_info(PromiseLike)
File: $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:11:1
   |
11 | async function fn5(): PromiseLike<void> { } // error
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            368,
        ),
        hi: BytePos(
            387,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:11:21
   |
11 | async function fn5(): PromiseLike<void> { } // error
   |                     ^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Thenable)
File: $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:12:1
   |
12 | async function fn6(): Thenable { } // error
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            422,
        ),
        hi: BytePos(
            432,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:12:21
   |
12 | async function fn6(): Thenable { } // error
   |                     ^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            660,
        ),
        hi: BytePos(
            669,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration15_es6.ts:16:32
   |
16 | async function fn10() { return undefined; } // valid: Promise<any>
   |                                ^^^^^^^^^

